--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p> i'm hosted with github pages.<p>
+<h1>剑剑说：</h1>
+<p>霖霖是最棒的！<p>
 </body>
 </html>
